styles/styles.css
body {
  background: #f7f7f9;
  width: 100%;
  margin: 0%;
}

.headline {
  background-image: url("../img/02.svg");
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}

nav > ul {
  flex-direction: row;
  align-items: center;
  padding: 0;
  gap: 8px;
  display: none;
}

nav > ul > li > a {
  text-decoration: none;
}

.logo-text {
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #4c5ace;
  flex: none;
  order: 0;
  flex-grow: 0;
  text-decoration: none;
}

.header-text {
  padding-top: 100px;
  padding-bottom: 25px;
  width: 66%;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: auto;
}

.header-text-about {
  padding-top: 100px;
  padding-bottom: 25px;
  width: 66%;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: auto;
}

.paragraph-text {
  width: 66%;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 1;
  flex-grow: 0;
  margin: auto;
}

.connect-text {
  width: 66%;
  height: 24px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: auto;
  padding-top: 20px;
}

.the-icon-list {
  height: 20px;
  flex: none;
  order: 3;
  flex-grow: 0;
  width: 66%;
  margin: auto;
  padding: 0;
  padding-top: 20px;
  padding-bottom: 25px;
}

.the-icon-list > li {
  display: inline;
  list-style: none;
}

.the-icon-list > li > a {
  padding-right: 15px;
  text-decoration: none;
}

.logo-left {
  width: 76px;
  height: 20px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #4c5ace;
  float: left;
  padding-left: 24px;
}

.nav-right {
  float: right;
  width: 18px;
  height: 12px;
  padding-right: 5%;
}

.top-header {
  margin-top: 12px;
}

.snapshoot-portfolio {
  border-radius: 8px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.card-works {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16px;
  gap: 12px;
  width: 327px;
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: auto;
  margin-bottom: 80px;
}

.content-portfolio > h1 {
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
  padding-left: 16px;
}

.canopy {
  width: 55px;
  height: 16px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #344563;
  flex: none;
  order: 0;
  flex-grow: 0;
  list-style: none;
  display: inline;
  padding-left: 16px;
}

.no-canopy {
  width: 88px;
  height: 16px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #677283;
  flex: none;
  order: 0;
  flex-grow: 0;
  display: inline;
  padding-left: 10px;
}

.content-portfolio > p {
  height: 76px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 1;
  flex-grow: 0;
  padding-left: 16px;
}

.components-used {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
  gap: 8px;
  height: 24px;
  flex: none;
  order: 2;
  flex-grow: 0;
  padding-left: 16px;
}

.components-used > li {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 4px 12px;
  height: 24px;
  background: #ebebff;
  border-radius: 8px;
  flex: none;
  order: 0;
  flex-grow: 0;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #4c5ace;
}

.see-project {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 15px;
  gap: 10px;
  height: 48px;
  left: 0;
  top: calc(50% - 48px / 2);
  border: 1px solid #4c5ace;
  border-radius: 8px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #396df2;
  flex: none;
  order: 0;
  flex-grow: 0;
  background: #fff;
  margin-left: 17%;
  cursor: pointer;
}

.see-project-padding {
  margin-left: 5%;
}

.about-section-bottom {
  display: block;
}

.about-section-top {
  display: block;
}

.dot-box {
  display: inline;
  width: 8px;
  height: 1px;
  flex: none;
  order: 1;
  flex-grow: 0;
  background-repeat: no-repeat;
  padding-left: 10px;
}

.details-portfolio {
  padding-left: 1px;
}

.about-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 114px 24px;
  gap: 24px;
  left: calc(50% - 375px / 2);
  top: 3506px;
  width: 375px;
  height: 1263px;
  background: #fff;
  transform: rotate(-180deg);
}

.prelist {
  display: flex;
  width: 85%;
  margin: auto;
  height: 72px;
  flex: none;
  order: 0;
  flex-grow: 0;
  align-items: center;
}

.prelist > p {
  height: 24px;
  left: 12px;
  right: 78px;
  top: calc(50% - 24px / 2);
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  display: inline;
  align-items: center;
  color: #000;
  width: 100%;
}

.img-two {
  width: 10px;
  margin-left: 47%;
}

.img-three {
  width: 10px;
  margin-left: 70%;
}

.img-one {
  margin-left: 45%;
}

.frameworks-utilised {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 12px;
  gap: 12px;
  width: 85%;
  margin: auto;
  height: 248.15px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.frameworks-utilised > li {
  display: flex;
  width: 100%;
  height: 66.72px;
  background: #f7f7f9;
  border-radius: 8px;
  flex: none;
  order: 0;
  flex-grow: 0;
  list-style: none;
}

.frameworks-utilised > li > img {
  width: 48px;
  height: 48px;
  left: 12px;
  top: calc(50% - 48px / 2 - 0.36px);
  border: 1px solid #fff;
  display: inline;
  margin-top: 10px;
  margin-left: 15px;
}

.frameworks-utilised > li > p {
  height: 24px;
  left: 76px;
  right: 12px;
  top: calc(50% - 24px / 2 - 0.36px);
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  display: inline;
  align-items: center;
  color: #253858;
}

.about-section-container {
  background: #fff;
  border-top-right-radius: 70px;
  height: 1250px;
  background-repeat: no-repeat;
  background-size: cover;
  display: block;
}

.the-contact-section {
  background: #4c5ace;
  background-image: url("../img/18.svg");
  background-repeat: no-repeat;
  background-size: cover;
  border-top-left-radius: 70px;
}

.contact-section {
  align-items: center;
}

.contact-top > h1 {
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  text-align: center;
  color: #fff;
  font-family: "Poppins", sans-serif;
  margin: auto;
  padding-top: 100px;
}

.contact-top-p {
  width: 327px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #ebebff;
  margin: auto;
  padding-top: 10px;
  padding-bottom: 10px;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form-name {
  height: 48px;
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  width: 80%;
  margin: auto;
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 17px;
  line-height: 20px;
  display: flex;
  align-items: center;
  color: #172b4d;
}

textarea {
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  width: 80%;
  height: 140px;
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #b3bac5;
}

.get-in-touch {
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #4c5ace;
  flex: none;
  order: 0;
  flex-grow: 0;
  padding: 12px 16px;
  border-radius: 10px;
  border-style: none;
  margin-right: 43%;
  margin-top: 5%;
  margin-bottom: 10%;
  cursor: pointer;
}

.get-in-touch:hover {
  background: #4c5ace;
  box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
  color: #fff;
}

.see-project:hover {
  background: #4c5ace;
  box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
  color: #fff;
}

